--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,15 @@ a {
 a:hover {
   color: black;
 }
+
+.top-buffer {
+  margin-top: 100px;
+}
+
+h1 {
+  text-align: center;
+}
+
+table {
+  margin: 0 auto;
+}
